# gnu_fituvalu

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
src/: 3sq-pair-search.c  3sq.c  4sq-progressions.c  4sq.c  Makefile.am  auto-transform-square  check-divisors.c  check-square.c  combination-square.c  complete-3sq-progression.c  complete-4sq-progression.c  convert-binary-gmp-records-to-text.c  count-squares.c  display-square.c  find-3sq-progressions-conrad.c  find-3sq-progressions-dist.c  find-3sq-progressions-gutierrez.c  find-3sq-progressions-mn.c  find-3sq-progressions.c  fulcrum-progression-1.c  fulcrum-progression-2.c  fulcrum-progression-3.c  fulcrum-progression-4.c  fulcrum-progression-5.c  fulcrum-progression1.c  fulcrum-progression2.c  fulcrum-progression3.c  fulcrum-progression4.c  fulcrum-progression5.c  gen-progression.c  gutierrez-square.c  hillyer-square.c  lucas-square.c  magicsquareutil.c  magicsquareutil.h  mine-3sq-progressions.c  mod-square.c  morgenstern-five-type.c  morgenstern-search-type-1.c  morgenstern-search-type-2.c  (+66 more)
tests/: 0001  0002  0003  0004  0005  0006  0007  0008  0009  0010  0011  0012  0013  0014  0015  0016  0017  0018  0019  0020  0021  0022  0023  0024  0025  0026  0027  0028  0029  0030  0031  0032  0033  0034  0035  0036  0037  0038  0039  0040  (+53 more)
