# Copyright (C) 2016, 2017 Ben Asselstine
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
bin_PROGRAMS = \
	     small-step-progression1 step-progression1 \
             small-step-progression2 step-progression2 \
	     small-step-progression3 step-progression3 \
	     small-step-progression4 step-progression4 \
	     small-reverse-step-progression1 reverse-step-progression1 \
	     small-fulcrum-progression1 fulcrum-progression1 \
	     small-fulcrum-progression2 fulcrum-progression2 \
	     small-fulcrum-progression3 fulcrum-progression3 \
	     small-fulcrum-progression4 fulcrum-progression4 \
	     small-fulcrum-progression5 fulcrum-progression5 \
	     small-reverse-fulcrum-progression1 reverse-fulcrum-progression1 \
             \
	     permute-square transform-square count-squares reduce-square \
	     rotate-square type-square sort-square number-square \
             check-square progression-type-square display-square sq-seq \
	     square-search 4sq complete-4sq-progression gen-progression \
	     convert-binary-gmp-records-to-text morgenstern-five-type \
	     seq-morgenstern-mn morgenstern-search-type-1 \
	     morgenstern-search-type-2 morgenstern-search-type-3 \
	     morgenstern-search-type-4 morgenstern-search-type-5 \
	     morgenstern-search-type-6 morgenstern-search-type-7 \
	     morgenstern-search-type-8 \
	     mine-3sq-progressions

noinst_LTLIBRARIES = libmagicsquareutil.la

bin_SCRIPTS = auto-transform-square uniq-squares

small_step_progression1_SOURCES = small-step-progression1.c
small_step_progression1_LDADD = -lm libmagicsquareutil.la

step_progression1_SOURCES = step-progression1.c
step_progression1_LDADD = -lm libmagicsquareutil.la

small_step_progression2_SOURCES = small-step-progression2.c
small_step_progression2_LDADD = -lm libmagicsquareutil.la

step_progression3_SOURCES = step-progression3.c
step_progression3_LDADD = -lm libmagicsquareutil.la

small_step_progression3_SOURCES = small-step-progression3.c
small_step_progression3_LDADD = -lm libmagicsquareutil.la

step_progression4_SOURCES = step-progression4.c
step_progression4_LDADD = -lm libmagicsquareutil.la

small_step_progression4_SOURCES = small-step-progression4.c
small_step_progression4_LDADD = -lm libmagicsquareutil.la

step_progression2_SOURCES = step-progression2.c
step_progression2_LDADD = -lm libmagicsquareutil.la

small_reverse_step_progression1_SOURCES = small-reverse-step-progression1.c
small_reverse_step_progression1_LDADD = -lm libmagicsquareutil.la

reverse_step_progression1_SOURCES = reverse-step-progression1.c
reverse_step_progression1_LDADD = -lm libmagicsquareutil.la

small_fulcrum_progression1_SOURCES = small-fulcrum-progression1.c
small_fulcrum_progression1_LDADD = -lm libmagicsquareutil.la

fulcrum_progression1_SOURCES = fulcrum-progression1.c
fulcrum_progression1_LDADD = -lm libmagicsquareutil.la

small_fulcrum_progression2_SOURCES = small-fulcrum-progression2.c
small_fulcrum_progression2_LDADD = -lm libmagicsquareutil.la

fulcrum_progression2_SOURCES = fulcrum-progression2.c
fulcrum_progression2_LDADD = -lm libmagicsquareutil.la

small_fulcrum_progression3_SOURCES = small-fulcrum-progression3.c
small_fulcrum_progression3_LDADD = -lm libmagicsquareutil.la

fulcrum_progression3_SOURCES = fulcrum-progression3.c
fulcrum_progression3_LDADD = -lm libmagicsquareutil.la

small_fulcrum_progression4_SOURCES = small-fulcrum-progression4.c
small_fulcrum_progression4_LDADD = -lm libmagicsquareutil.la

fulcrum_progression4_SOURCES = fulcrum-progression4.c
fulcrum_progression4_LDADD = -lm libmagicsquareutil.la

small_fulcrum_progression5_SOURCES = small-fulcrum-progression5.c
small_fulcrum_progression5_LDADD = -lm libmagicsquareutil.la

fulcrum_progression5_SOURCES = fulcrum-progression5.c
fulcrum_progression5_LDADD = -lm libmagicsquareutil.la

small_reverse_fulcrum_progression1_SOURCES = small-reverse-fulcrum-progression1.c
small_reverse_fulcrum_progression1_LDADD = -lm libmagicsquareutil.la

reverse_fulcrum_progression1_SOURCES = reverse-fulcrum-progression1.c
reverse_fulcrum_progression1_LDADD = -lm libmagicsquareutil.la

permute_square_SOURCES = permute-square.c
permute_square_LDADD = -lm libmagicsquareutil.la

transform_square_SOURCES = transform-square.c
transform_square_LDADD = -lm libmagicsquareutil.la

count_squares_SOURCES = count-squares.c
count_squares_LDADD = -lm libmagicsquareutil.la

reduce_square_SOURCES = reduce-square.c
reduce_square_LDADD = -lm libmagicsquareutil.la

rotate_square_SOURCES = rotate-square.c
rotate_square_LDADD = -lm libmagicsquareutil.la

type_square_SOURCES = type-square.c
type_square_LDADD = -lm libmagicsquareutil.la

sort_square_SOURCES = sort-square.c
sort_square_LDADD = -lm libmagicsquareutil.la

number_square_SOURCES = number-square.c
number_square_LDADD = -lm libmagicsquareutil.la

check_square_SOURCES = check-square.c
check_square_LDADD = -lm libmagicsquareutil.la

progression_type_square_SOURCES = progression-type-square.c
progression_type_square_LDADD = -lm libmagicsquareutil.la

display_square_SOURCES = display-square.c
display_square_LDADD = -lm libmagicsquareutil.la

sq_seq_SOURCES = sq-seq.c
sq_seq_LDADD = -lm

square_search_SOURCES = square-search.c
square_search_LDADD = -lm

4sq_SOURCES = 4sq.c
4sq_LDADD = -lm libmagicsquareutil.la

gen_progression_SOURCES = gen-progression.c
gen_progression_LDADD = -lm libmagicsquareutil.la

complete_4sq_progression_SOURCES = complete-4sq-progression.c
complete_4sq_progression_LDADD = -lm libmagicsquareutil.la

convert_binary_gmp_records_to_text_SOURCES = convert-binary-gmp-records-to-text.c
convert_binary_gmp_records_to_text_LDADD = -lm libmagicsquareutil.la

morgenstern_five_type_SOURCES = morgenstern-five-type.c
morgenstern_five_type_LDADD = -lm libmagicsquareutil.la

seq_morgenstern_mn_SOURCES = seq-morgenstern-mn.c
seq_morgenstern_mn_LDADD= -lm

morgenstern_search_type_1_SOURCES = morgenstern-search-type-1.c
morgenstern_search_type_1_LDADD = -lm libmagicsquareutil.la

morgenstern_search_type_2_SOURCES = morgenstern-search-type-2.c
morgenstern_search_type_2_LDADD = -lm libmagicsquareutil.la

morgenstern_search_type_3_SOURCES = morgenstern-search-type-3.c
morgenstern_search_type_3_LDADD = -lm libmagicsquareutil.la

morgenstern_search_type_4_SOURCES = morgenstern-search-type-4.c
morgenstern_search_type_4_LDADD = -lm libmagicsquareutil.la

morgenstern_search_type_5_SOURCES = morgenstern-search-type-5.c
morgenstern_search_type_5_LDADD = -lm libmagicsquareutil.la

morgenstern_search_type_6_SOURCES = morgenstern-search-type-6.c
morgenstern_search_type_6_LDADD = -lm libmagicsquareutil.la

morgenstern_search_type_7_SOURCES = morgenstern-search-type-7.c
morgenstern_search_type_7_LDADD = -lm libmagicsquareutil.la

morgenstern_search_type_8_SOURCES = morgenstern-search-type-8.c
morgenstern_search_type_8_LDADD = -lm libmagicsquareutil.la

mine_3sq_progressions_SOURCES = mine-3sq-progressions.c
mine_3sq_progressions_LDADD = -lm libmagicsquareutil.la

libmagicsquareutil_la_SOURCES=magicsquareutil.c magicsquareutil.h \
			      4sq-progressions.c nine-progressions.c

AM_CFLAGS=-Wall

EXTRA_DIST = auto-transform-square uniq-squares
