# Copyright (C) 2016, 2017 Ben Asselstine
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
bin_PROGRAMS = \
	     small-step-progression-1 step-progression-1 \
             small-step-progression-2 step-progression-2 \
	     small-step-progression-3 step-progression-3 \
	     small-step-progression-4 step-progression-4 \
	     small-reverse-step-progression-1 reverse-step-progression-1 \
	     small-fulcrum-progression-1 fulcrum-progression-1 \
	     small-fulcrum-progression-2 fulcrum-progression-2 \
	     small-fulcrum-progression-3 fulcrum-progression-3 \
	     small-fulcrum-progression-4 fulcrum-progression-4 \
	     small-fulcrum-progression-5 fulcrum-progression-5 \
	     small-reverse-fulcrum-progression-1 reverse-fulcrum-progression-1 \
             \
	     permute-square transform-square count-squares reduce-square \
	     rotate-square type-square sort-square number-square \
             check-square progression-type-square display-square sq-seq \
	     4sq complete-4sq-progression gen-progression lucas-square \
	     convert-binary-gmp-records-to-text morgenstern-five-type \
             \
	     small-seq-morgenstern-mn seq-morgenstern-mn \
	     small-morgenstern-search-type-1 morgenstern-search-type-1 \
	     small-morgenstern-search-type-2 morgenstern-search-type-2 \
	     small-morgenstern-search-type-3 morgenstern-search-type-3 \
	     small-morgenstern-search-type-4 morgenstern-search-type-4 \
	     small-morgenstern-search-type-5 morgenstern-search-type-5 \
	     small-morgenstern-search-type-6 morgenstern-search-type-6 \
	     small-morgenstern-search-type-7 morgenstern-search-type-7 \
	     small-morgenstern-search-type-8 morgenstern-search-type-8 \
             \
	     mine-3sq-progressions \
	     find-3sq-progressions-mn find-3sq-progressions \
	     small-find-3sq-progressions-gutierrez \
	     find-3sq-progressions-gutierrez \
	     find-3sq-progressions-dist \
	     complete-3sq-progression reduce-3sq-progression \
	     nine-search 3sq-pair-search odd-square \
	     \
	     siamese-square gutierrez-square check-divisors \
	     hillyer-square multiply-3sq-progression

noinst_LTLIBRARIES = libmagicsquareutil.la

bin_SCRIPTS = auto-transform-square uniq-squares

small_step_progression_1_SOURCES = small-step-progression-1.c
small_step_progression_1_LDADD = -lm libmagicsquareutil.la

step_progression_1_SOURCES = step-progression-1.c
step_progression_1_LDADD = -lm libmagicsquareutil.la

small_step_progression_2_SOURCES = small-step-progression-2.c
small_step_progression_2_LDADD = -lm libmagicsquareutil.la

step_progression_3_SOURCES = step-progression-3.c
step_progression_3_LDADD = -lm libmagicsquareutil.la

small_step_progression_3_SOURCES = small-step-progression-3.c
small_step_progression_3_LDADD = -lm libmagicsquareutil.la

step_progression_4_SOURCES = step-progression-4.c
step_progression_4_LDADD = -lm libmagicsquareutil.la

small_step_progression_4_SOURCES = small-step-progression-4.c
small_step_progression_4_LDADD = -lm libmagicsquareutil.la

step_progression_2_SOURCES = step-progression-2.c
step_progression_2_LDADD = -lm libmagicsquareutil.la

small_reverse_step_progression_1_SOURCES = small-reverse-step-progression-1.c
small_reverse_step_progression_1_LDADD = -lm libmagicsquareutil.la

reverse_step_progression_1_SOURCES = reverse-step-progression-1.c
reverse_step_progression_1_LDADD = -lm libmagicsquareutil.la

small_fulcrum_progression_1_SOURCES = small-fulcrum-progression-1.c
small_fulcrum_progression_1_LDADD = -lm libmagicsquareutil.la

fulcrum_progression_1_SOURCES = fulcrum-progression-1.c
fulcrum_progression_1_LDADD = -lm libmagicsquareutil.la

small_fulcrum_progression_2_SOURCES = small-fulcrum-progression-2.c
small_fulcrum_progression_2_LDADD = -lm libmagicsquareutil.la

fulcrum_progression_2_SOURCES = fulcrum-progression-2.c
fulcrum_progression_2_LDADD = -lm libmagicsquareutil.la

small_fulcrum_progression_3_SOURCES = small-fulcrum-progression-3.c
small_fulcrum_progression_3_LDADD = -lm libmagicsquareutil.la

fulcrum_progression_3_SOURCES = fulcrum-progression-3.c
fulcrum_progression_3_LDADD = -lm libmagicsquareutil.la

small_fulcrum_progression_4_SOURCES = small-fulcrum-progression-4.c
small_fulcrum_progression_4_LDADD = -lm libmagicsquareutil.la

fulcrum_progression_4_SOURCES = fulcrum-progression-4.c
fulcrum_progression_4_LDADD = -lm libmagicsquareutil.la

small_fulcrum_progression_5_SOURCES = small-fulcrum-progression-5.c
small_fulcrum_progression_5_LDADD = -lm libmagicsquareutil.la

fulcrum_progression_5_SOURCES = fulcrum-progression-5.c
fulcrum_progression_5_LDADD = -lm libmagicsquareutil.la

small_reverse_fulcrum_progression_1_SOURCES = small-reverse-fulcrum-progression-1.c
small_reverse_fulcrum_progression_1_LDADD = -lm libmagicsquareutil.la

reverse_fulcrum_progression_1_SOURCES = reverse-fulcrum-progression-1.c
reverse_fulcrum_progression_1_LDADD = -lm libmagicsquareutil.la

permute_square_SOURCES = permute-square.c
permute_square_LDADD = -lm libmagicsquareutil.la

transform_square_SOURCES = transform-square.c
transform_square_LDADD = -lm libmagicsquareutil.la

count_squares_SOURCES = count-squares.c
count_squares_LDADD = -lm libmagicsquareutil.la

reduce_square_SOURCES = reduce-square.c
reduce_square_LDADD = -lm libmagicsquareutil.la

rotate_square_SOURCES = rotate-square.c
rotate_square_LDADD = -lm libmagicsquareutil.la

type_square_SOURCES = type-square.c
type_square_LDADD = -lm libmagicsquareutil.la

sort_square_SOURCES = sort-square.c
sort_square_LDADD = -lm libmagicsquareutil.la

number_square_SOURCES = number-square.c
number_square_LDADD = -lm libmagicsquareutil.la

check_square_SOURCES = check-square.c
check_square_LDADD = -lm libmagicsquareutil.la

progression_type_square_SOURCES = progression-type-square.c
progression_type_square_LDADD = -lm libmagicsquareutil.la

display_square_SOURCES = display-square.c
display_square_LDADD = -lm libmagicsquareutil.la

sq_seq_SOURCES = sq-seq.c
sq_seq_LDADD = -lm

4sq_SOURCES = 4sq.c
4sq_LDADD = -lm libmagicsquareutil.la

gen_progression_SOURCES = gen-progression.c
gen_progression_LDADD = -lm libmagicsquareutil.la

complete_4sq_progression_SOURCES = complete-4sq-progression.c
complete_4sq_progression_LDADD = -lm libmagicsquareutil.la

convert_binary_gmp_records_to_text_SOURCES = convert-binary-gmp-records-to-text.c
convert_binary_gmp_records_to_text_LDADD = -lm libmagicsquareutil.la

morgenstern_five_type_SOURCES = morgenstern-five-type.c
morgenstern_five_type_LDADD = -lm libmagicsquareutil.la

small_seq_morgenstern_mn_SOURCES = small-seq-morgenstern-mn.c
small_seq_morgenstern_mn_LDADD= -lm

seq_morgenstern_mn_SOURCES = seq-morgenstern-mn.c
seq_morgenstern_mn_LDADD= -lm libmagicsquareutil.la

morgenstern_search_type_1_SOURCES = morgenstern-search-type-1.c
morgenstern_search_type_1_LDADD = -lm libmagicsquareutil.la

morgenstern_search_type_2_SOURCES = morgenstern-search-type-2.c
morgenstern_search_type_2_LDADD = -lm libmagicsquareutil.la

morgenstern_search_type_3_SOURCES = morgenstern-search-type-3.c
morgenstern_search_type_3_LDADD = -lm libmagicsquareutil.la

morgenstern_search_type_4_SOURCES = morgenstern-search-type-4.c
morgenstern_search_type_4_LDADD = -lm libmagicsquareutil.la

morgenstern_search_type_5_SOURCES = morgenstern-search-type-5.c
morgenstern_search_type_5_LDADD = -lm libmagicsquareutil.la

morgenstern_search_type_6_SOURCES = morgenstern-search-type-6.c
morgenstern_search_type_6_LDADD = -lm libmagicsquareutil.la

morgenstern_search_type_7_SOURCES = morgenstern-search-type-7.c
morgenstern_search_type_7_LDADD = -lm libmagicsquareutil.la

morgenstern_search_type_8_SOURCES = morgenstern-search-type-8.c
morgenstern_search_type_8_LDADD = -lm libmagicsquareutil.la

small_morgenstern_search_type_1_SOURCES = small-morgenstern-search-type-1.c
small_morgenstern_search_type_1_LDADD = -lm libmagicsquareutil.la

small_morgenstern_search_type_2_SOURCES = small-morgenstern-search-type-2.c
small_morgenstern_search_type_2_LDADD = -lm libmagicsquareutil.la

small_morgenstern_search_type_3_SOURCES = small-morgenstern-search-type-3.c
small_morgenstern_search_type_3_LDADD = -lm libmagicsquareutil.la

small_morgenstern_search_type_4_SOURCES = small-morgenstern-search-type-4.c
small_morgenstern_search_type_4_LDADD = -lm libmagicsquareutil.la

small_morgenstern_search_type_5_SOURCES = small-morgenstern-search-type-5.c
small_morgenstern_search_type_5_LDADD = -lm libmagicsquareutil.la

small_morgenstern_search_type_6_SOURCES = small-morgenstern-search-type-6.c
small_morgenstern_search_type_6_LDADD = -lm libmagicsquareutil.la

small_morgenstern_search_type_7_SOURCES = small-morgenstern-search-type-7.c
small_morgenstern_search_type_7_LDADD = -lm libmagicsquareutil.la

small_morgenstern_search_type_8_SOURCES = small-morgenstern-search-type-8.c
small_morgenstern_search_type_8_LDADD = -lm libmagicsquareutil.la

mine_3sq_progressions_SOURCES = mine-3sq-progressions.c
mine_3sq_progressions_LDADD = -lm libmagicsquareutil.la

find_3sq_progressions_mn_SOURCES = find-3sq-progressions-mn.c
find_3sq_progressions_mn_LDADD = -lm libmagicsquareutil.la

find_3sq_progressions_dist_SOURCES = find-3sq-progressions-dist.c
find_3sq_progressions_dist_LDADD = -lm libmagicsquareutil.la

find_3sq_progressions_SOURCES = find-3sq-progressions.c
find_3sq_progressions_LDADD = -lm libmagicsquareutil.la

small_find_3sq_progressions_gutierrez_SOURCES = small-find-3sq-progressions-gutierrez.c
small_find_3sq_progressions_gutierrez_LDADD = -lm libmagicsquareutil.la

find_3sq_progressions_gutierrez_SOURCES = find-3sq-progressions-gutierrez.c
find_3sq_progressions_gutierrez_LDADD = -lm libmagicsquareutil.la

complete_3sq_progression_SOURCES = complete-3sq-progression.c
complete_3sq_progression_LDADD = -lm libmagicsquareutil.la

reduce_3sq_progression_SOURCES = reduce-3sq-progression.c
reduce_3sq_progression_LDADD = -lm libmagicsquareutil.la

lucas_square_SOURCES = lucas-square.c
lucas_square_LDADD = -lm libmagicsquareutil.la

libmagicsquareutil_la_SOURCES=magicsquareutil.c magicsquareutil.h \
			      4sq-progressions.c nine-progressions.c

nine_search_SOURCES = nine-search.c
nine_search_LDADD = -lm libmagicsquareutil.la

3sq_pair_search_SOURCES = 3sq-pair-search.c
3sq_pair_search_LDADD = -lm libmagicsquareutil.la

odd_square_SOURCES = odd-square.c
odd_square_LDADD = -lm libmagicsquareutil.la

siamese_square_SOURCES = siamese-square.c
siamese_square_LDADD = -lm libmagicsquareutil.la

gutierrez_square_SOURCES = gutierrez-square.c
gutierrez_square_LDADD = -lm libmagicsquareutil.la

check_divisors_SOURCES = check-divisors.c
check_divisors_LDADD = -lm libmagicsquareutil.la

hillyer_square_SOURCES = hillyer-square.c
hillyer_square_LDADD = -lm libmagicsquareutil.la

multiply_3sq_progression_SOURCES = multiply-3sq-progression.c
multiply_3sq_progression_LDADD = -lm libmagicsquareutil.la

AM_CFLAGS=-Wall

EXTRA_DIST = auto-transform-square uniq-squares
