# Copyright (C) 2017 Ben Asselstine
# 
# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved.  This file is offered as-is,
# without any warranty.
AM_COLOR_TESTS=no
AM_TESTS_ENVIRONMENT=export builddir=${builddir};

fituvalu_tests=0001 0002 0003 0004 0005 0006 0007 0008 0009 0010 0011 \
	       0012 0013 0014 0015 0016 0017 0018 0019 0020 0021 0022 \
	       0023 0024 0025 0026 0027 0028 0029 0030 0031 0032 0033
TESTS=${fituvalu_tests}
check_SCRIPTS=${fituvalu_tests}

EXTRA_DIST=${fituvalu_tests}
